@@ -21,12 +21,9 @@ import org.checkerframework.checker.nullness.qual.Nullable;
  *
  * <pre>import static org.checkerframework.checker.nullness.Opt.*;</pre>
  *
- * <p><b>Runtime Dependency</b>
- *
- * <p>Please note that using this class introduces a runtime dependency. This means that you need to
- * distribute (or link to) {@code checker-qual.jar}, along with your binaries.
- *
- * <p>To eliminate this dependency, you can simply copy this class into your own project.
+ * <p><b>Runtime Dependency</b>: If you use this class, you must distribute (or link to) {@code
+ * checker-qual.jar}, along with your binaries. Or, you can can copy this class into your own
+ * project.
  *
  * @see java.util.Optional
  */
@@ -40,6 +37,7 @@ public final class Opt {
     /**
      * If primary is non-null, returns it, otherwise throws NoSuchElementException.
      *
+     * @param <T> the type of the argument
      * @param primary a non-null value to return
      * @return {@code primary} if it is non-null
      * @throws NoSuchElementException if primary is null
