@@ -1,3 +1,9 @@
+Version 3.?.?, August 3, 2020
+
+Added an overloaded version of NullnessUtil.castNonNull that takes an error message.
+
+---------------------------------------------------------------------------
+
 Version 3.5.0, July 1, 2020
 
 Use "allcheckers:" instead of "all:" as a prefix in a warning suppression string.
